--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +165,166 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "167"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_items = set().union(*transactions['itemDescription'])\n",
+    "len(all_items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vert_df = pd.DataFrame([(item, set()) for item in all_items], columns=['itemDescription', 'Tids'])\n",
+    "for i, row in vert_df.iterrows():\n",
+    "    item_trans = transactions[transactions['itemDescription']\\\n",
+    "                              .apply(lambda x: row['itemDescription'] in x)]['Tid']\n",
+    "    row['Tids'] = set(item_trans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>itemDescription</th>\n",
+       "      <th>Tids</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>grapes</td>\n",
+       "      <td>{3183-10-12-2014, 2235-10-10-2014, 3241-20-09-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>whole milk</td>\n",
+       "      <td>{3140-25-09-2014, 2466-10-10-2015, 3487-25-03-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>soups</td>\n",
+       "      <td>{1500-20-06-2014, 3262-08-12-2015, 2114-24-05-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>meat spreads</td>\n",
+       "      <td>{1190-25-11-2014, 4637-08-12-2014, 2437-09-10-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dish cleaner</td>\n",
+       "      <td>{2235-10-10-2014, 2366-11-10-2014, 3172-01-03-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>canned vegetables</td>\n",
+       "      <td>{3532-17-08-2014, 3416-15-11-2015, 1817-15-11-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>{3299-09-01-2014, 2235-25-10-2015, 3462-15-11-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>toilet cleaner</td>\n",
+       "      <td>{4682-21-04-2014, 3256-17-12-2014, 3948-08-04-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>fish</td>\n",
+       "      <td>{1024-10-08-2015, 2157-29-10-2015, 3226-15-09-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>cat food</td>\n",
+       "      <td>{2408-10-11-2014, 1206-02-01-2015, 4665-03-12-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>167 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       itemDescription                                               Tids\n",
+       "0               grapes  {3183-10-12-2014, 2235-10-10-2014, 3241-20-09-...\n",
+       "1           whole milk  {3140-25-09-2014, 2466-10-10-2015, 3487-25-03-...\n",
+       "2                soups  {1500-20-06-2014, 3262-08-12-2015, 2114-24-05-...\n",
+       "3         meat spreads  {1190-25-11-2014, 4637-08-12-2014, 2437-09-10-...\n",
+       "4         dish cleaner  {2235-10-10-2014, 2366-11-10-2014, 3172-01-03-...\n",
+       "..                 ...                                                ...\n",
+       "162  canned vegetables  {3532-17-08-2014, 3416-15-11-2015, 1817-15-11-...\n",
+       "163                ham  {3299-09-01-2014, 2235-25-10-2015, 3462-15-11-...\n",
+       "164     toilet cleaner  {4682-21-04-2014, 3256-17-12-2014, 3948-08-04-...\n",
+       "165               fish  {1024-10-08-2015, 2157-29-10-2015, 3226-15-09-...\n",
+       "166           cat food  {2408-10-11-2014, 1206-02-01-2015, 4665-03-12-...\n",
+       "\n",
+       "[167 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vert_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set().union()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from eclat_algo import eclat"
@@ -172,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +350,7 @@
        " (['milk', 'cheese'], 2)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,23 +372,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "75"
+       "[(['soft cheese'], 150),\n",
+       " (['processed cheese'], 152),\n",
+       " (['red/blush wine'], 157),\n",
+       " (['herbs'], 158),\n",
+       " (['white wine'], 175),\n",
+       " (['cat food'], 177),\n",
+       " (['chewing gum'], 180),\n",
+       " (['hygiene articles'], 205),\n",
+       " (['specialty bar'], 209),\n",
+       " (['sliced cheese'], 210),\n",
+       " (['candy'], 215),\n",
+       " (['grapes'], 216),\n",
+       " (['hard cheese'], 220),\n",
+       " (['oil'], 223),\n",
+       " (['ice cream'], 227),\n",
+       " (['misc. beverages'], 236),\n",
+       " (['specialty chocolate'], 239),\n",
+       " (['beverages'], 248),\n",
+       " (['frozen meals'], 251),\n",
+       " (['meat'], 252),\n",
+       " (['ham'], 256),\n",
+       " (['butter milk'], 263),\n",
+       " (['sugar'], 265),\n",
+       " (['long life bakery product'], 268),\n",
+       " (['waffles'], 277),\n",
+       " (['salty snack'], 281),\n",
+       " (['onions'], 303),\n",
+       " (['UHT-milk'], 320),\n",
+       " (['berries'], 326),\n",
+       " (['hamburger meat'], 327),\n",
+       " (['napkins'], 331),\n",
+       " (['chocolate'], 353),\n",
+       " (['dessert'], 353),\n",
+       " (['cream cheese '], 354),\n",
+       " (['white bread'], 359),\n",
+       " (['chicken'], 417),\n",
+       " (['frozen vegetables'], 419),\n",
+       " (['coffee'], 473),\n",
+       " (['margarine'], 482),\n",
+       " (['curd'], 504),\n",
+       " (['beef'], 508),\n",
+       " (['fruit/vegetable juice'], 509),\n",
+       " (['butter'], 527),\n",
+       " (['pork'], 555),\n",
+       " (['domestic eggs'], 555),\n",
+       " (['brown bread'], 563),\n",
+       " (['frankfurter'], 565),\n",
+       " (['newspapers'], 582),\n",
+       " (['whipped/sour cream'], 654),\n",
+       " (['bottled beer'], 678),\n",
+       " (['canned beer'], 702),\n",
+       " (['shopping bags'], 712),\n",
+       " (['pip fruit'], 734),\n",
+       " (['pastry'], 774),\n",
+       " (['citrus fruit'], 795),\n",
+       " (['sausage'], 903),\n",
+       " (['bottled water'], 908),\n",
+       " (['tropical fruit'], 1014),\n",
+       " (['root vegetables'], 1041),\n",
+       " (['yogurt'], 1285),\n",
+       " (['soda'], 1453),\n",
+       " (['rolls/buns'], 1646),\n",
+       " (['other vegetables'], 1827),\n",
+       " (['whole milk'], 2363),\n",
+       " (['yogurt', 'whole milk'], 167),\n",
+       " (['soda', 'whole milk'], 174),\n",
+       " (['rolls/buns', 'other vegetables'], 158),\n",
+       " (['rolls/buns', 'whole milk'], 209),\n",
+       " (['other vegetables', 'whole milk'], 222)]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sup = .005\n",
-    "minFreq = math.ceil(len(transactions) * sup)\n",
+    "transformed_df = data.copy(deep=True)\n",
+    "transformed_df['Tid'] = transformed_df['Member_number'].astype('str') + '-' + transformed_df['Date']\n",
+    "transformed_df.drop(['Member_number', 'Date'], axis=1, inplace=True)\n",
+    "\n",
+    "eclat(transformed_df, 0.01, 'itemDescription')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sup = .01\n",
+    "minFreq = math.ceil(len(transformed_df['Tid'].unique()) * sup)\n",
     "minFreq"
    ]
   },
